# EasyFirebase

./: .gitignore  MANIFEST.in  PKG-INFO  README.md  pyproject.toml  setup.py
EasyFirebase/: fields.py  firebase.py  models.py
EasyFirebase/templatetags/: easy_tags.py
src/EasyFirebase/: apps.py  fields.py
src/easyfirebase/: apps.py  fields.py  storage.py
